[gd_scene load_steps=7 format=2]

[ext_resource path="res://ship/ShipInstance.gd" type="Script" id=1]
[ext_resource path="res://ship/ship.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Idle"

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hull:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -0.0586122, 0, 0, Vector2( 1, 0.123904 ), -2.83821, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.734628 )
colors = PoolColorArray( 0.739865, 0.993903, 1, 1, 1, 1, 1, 1 )

[node name="ShipInstance" type="KinematicBody2D" groups=[
"ships",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="ProjectileSpawn" type="Position2D" parent="."]
visible = false
position = Vector2( 0, -20.5 )

[node name="CollisionArea" type="Area2D" parent="."]
visible = false
collision_mask = 4

[node name="RightSide" type="CollisionPolygon2D" parent="CollisionArea"]
polygon = PoolVector2Array( -0.180351, -20.6137, 5.46648, -10.1505, 12.7742, -9.32006, 12.7742, -5.16797, 6.79515, -4.33755, 10.449, -1.8463, 11.7776, 3.30228, 20.414, 3.30228, 23.4035, 9.1152, 22.0748, 19.4124, 19.0853, 19.2463, 15.0993, 14.9281, 14.7672, 11.2743, 9.78465, 9.77954, 5.13432, 14.762, 0.15181, 14.762 )

[node name="LeftSide" type="CollisionPolygon2D" parent="CollisionArea"]
scale = Vector2( -1, 1 )
polygon = PoolVector2Array( -0.180351, -20.6137, 5.46648, -10.1505, 12.7742, -9.32006, 12.7742, -5.16797, 6.79515, -4.33755, 10.449, -1.8463, 11.7776, 3.30228, 20.414, 3.30228, 23.4035, 9.1152, 22.0748, 19.4124, 19.0853, 19.2463, 15.0993, 14.9281, 14.7672, 11.2743, 9.78465, 9.77954, 5.13432, 14.762, 0.15181, 14.762 )

[node name="Rightside" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -0.180351, -20.6137, 5.46648, -10.1505, 12.7742, -9.32006, 12.7742, -5.16797, 6.79515, -4.33755, 10.449, -1.8463, 11.7776, 3.30228, 20.414, 3.30228, 23.4035, 9.1152, 22.0748, 19.4124, 19.0853, 19.2463, 15.0993, 14.9281, 14.7672, 11.2743, 9.78465, 9.77954, 5.13432, 14.762, 0.15181, 14.762 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/Invincibility = SubResource( 2 )

[node name="ForwardPropulsion" type="CPUParticles2D" parent="."]
position = Vector2( 0, 12.9105 )
rotation = 1.5708
emitting = false
amount = 20
lifetime = 0.3
lifetime_randomness = 0.7
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 4, 2 )
direction = Vector2( 0, 0 )
spread = 10.47
gravity = Vector2( 0, 0 )
initial_velocity = 311.38
initial_velocity_random = 0.33
scale_amount = 2.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="LeftPropulsion" type="CPUParticles2D" parent="."]
position = Vector2( -8, -8 )
rotation = 3.14159
emitting = false
amount = 10
lifetime = 0.05
lifetime_randomness = 0.7
emission_shape = 2
emission_rect_extents = Vector2( 2, 2 )
direction = Vector2( 0, 0 )
spread = 2.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.33
scale_amount = 2.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="RightPropulsion" type="CPUParticles2D" parent="."]
position = Vector2( 8, -8 )
emitting = false
amount = 10
lifetime = 0.05
lifetime_randomness = 0.7
emission_shape = 2
emission_rect_extents = Vector2( 2, 1 )
direction = Vector2( 0, 0 )
spread = 2.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.33
scale_amount = 2.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="Hull" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="LeftSide" type="CollisionPolygon2D" parent="."]
visible = false
rotation = -3.14159
scale = Vector2( 1, -1 )
polygon = PoolVector2Array( -0.180351, -20.6137, 5.46648, -10.1505, 12.7742, -9.32006, 12.7742, -5.16797, 6.79515, -4.33755, 10.449, -1.8463, 11.7776, 3.30228, 20.414, 3.30228, 23.4035, 9.1152, 22.0748, 19.4124, 19.0853, 19.2463, 15.0993, 14.9281, 14.7672, 11.2743, 9.78465, 9.77954, 5.13432, 14.762, 0.15181, 14.762 )
[connection signal="body_entered" from="CollisionArea" to="." method="_on_Area2D_body_entered"]
